removed unneccessary content

--- a/css/v-1/main.css
+++ b/css/v-1/main.css
@@ -355,6 +355,7 @@ header .header-text .header-heading {
         margin-bottom: 20px;
         font-size: 34px;
         line-height: 40px;
+        color: #ff3366;
     }
 
     header .header-text .header-heading {
